# fscs-monitor

./: Cargo.toml  README.md  Trunk.toml  config.json  flake.nix  index.html  zeiten.json
.github/workflows/: rust.yml
src/: Trains.rs  cal.rs  legend.rs  main.rs  mensa.rs  progress.rs  trains.rs
src/calendar/: mod.rs  progress.rs
src/mensa/: mod.rs  stw_d_parser.rs
