[package]
name = "fscs_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr"] }
reqwest = "0.11.22"
wasm-bindgen-futures = "0.4.38"
wasm-bindgen = "0.2.50"
serde_json = "1.0.108"
chrono = "0.4.31"
js-sys = "0.3.65"
html5ever = "0.26.0"
tendril = "0.4.3"
html_parser = "0.7.0"
leptos_animation = "0.4.0"



[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Request',
  'Response',
  'Headers',
  'RequestInit',
  'ResponseInit',
  'RequestMode',
  'RequestCache',
]

[dependencies.ical]
version = "0.8.*"
default-features = false
features = ["ical", "vcard"]

