[package]
name = "fscs_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr"] }
reqwest = "0.11.22"
wasm-bindgen-futures = "0.4.38"
wasm-bindgen = "0.2.91"
serde_json = "1.0.108"
chrono = "0.4.31"
leptos_animation = "0.4.0"
scraper = "0.18.1"
regex = "1.10.2"
anyhow = "1.0.9"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros"] }
icalendar = "0.16.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Request',
  'Response',
  'Headers',
  'RequestInit',
  'ResponseInit',
  'RequestMode',
  'RequestCache',
]

